--- a/CheckerApplication-master/WpfApplication2/UserControlPages/EventPage.xaml
+++ b/CheckerApplication-master/WpfApplication2/UserControlPages/EventPage.xaml
@@ -7,13 +7,11 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300" Width="600" Height="800">
     <Grid>
-        <TextBlock x:Name="textBlock" HorizontalAlignment="Center" Margin="64.5,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="268" Width="471" TextAlignment="Center" FontSize="42.667" FontFamily="Lucida Fax" Foreground="White" FontWeight="Bold"><Run Text="GORDON COLLEGE Chapel Checker"/><LineBreak/><Run Text="Select an Event:"/></TextBlock>
+        <TextBlock x:Name="textBlock" HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" Height="50" Width="600" TextAlignment="Center" FontSize="42.667" FontFamily="Lucida Fax" Foreground="White" FontWeight="Bold" Text="Select an Event:"/>
         <Button x:Name="buttonOk" Content="Ok" HorizontalAlignment="Left" Margin="360,651,0,0" VerticalAlignment="Top" Width="176" Height="60" FontSize="42.667" FontFamily="DengXian" Click="buttonOk_Click" Cursor="Hand"/>
         <Button x:Name="buttonBack" Content="Back" HorizontalAlignment="Left" Margin="64,651,0,0" VerticalAlignment="Top" Width="176" Height="60" FontSize="42.667" FontFamily="DengXian" Click="buttonBack_Click" Cursor="Hand"/>
-        <TextBlock x:Name="labelID" HorizontalAlignment="Center" Margin="0,300,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Height="78" Width="350" FontFamily="DengXian" FontSize="18.667" Foreground="White"/>
-        <ListBox x:Name="listBox" HorizontalAlignment="Left" Height="321" Margin="64,167,0,0" VerticalAlignment="Top" Width="472" BorderBrush="Black" SelectionChanged="ListBox_SelectionChanged" Cursor="Hand">
-            <ListBoxItem x:Name="yz00" Height="40" Content="TEST EVENT ID: abcde" FontSize="24"/>
-        </ListBox>
+        <TextBlock x:Name="labelID" HorizontalAlignment="Center" Margin="0,430,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Height="40" Width="350" FontFamily="DengXian" FontSize="18.667" Foreground="White"/>
+        <ListBox x:Name="listBox" HorizontalAlignment="Center" Height="500" Margin="50,80,50,212" VerticalAlignment="Center" Width="500" BorderBrush="Black" SelectionChanged="ListBox_SelectionChanged" Cursor="Hand"/>
 
     </Grid>
 </UserControl>
