--- a/CheckerApplication-master/WpfApplication2/UserControlPages/ResultsPage.xaml
+++ b/CheckerApplication-master/WpfApplication2/UserControlPages/ResultsPage.xaml
@@ -7,9 +7,9 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300" Width="600" Height="800">
     <Grid>
-        <TextBlock x:Name="textBlockResults" HorizontalAlignment="Center" Margin="64,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="208" Width="472" TextAlignment="Center" FontSize="42.667" FontFamily="Lucida Fax" Foreground="White" FontWeight="Bold"><Run Text="GORDON COLLEGE Chapel Checker"/><LineBreak/><Run/><LineBreak/><Run Text="Results"/></TextBlock>
+        <TextBlock x:Name="textBlockResults" HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" Height="59" Width="600" TextAlignment="Center" FontSize="42.667" FontFamily="Lucida Fax" Foreground="White" FontWeight="Bold" Text="Results" Margin="0,20,0,0"/>
         <Button x:Name="buttonBack" Content="Back to Sign-in" HorizontalAlignment="Center" Margin="0,550,0,0" VerticalAlignment="Center" Width="400" Height="80" FontSize="42.667" FontFamily="DengXian" Click="buttonBack_Click" BorderBrush="Black" Cursor="Hand"/>
-        <TextBlock x:Name="textBlockSaveFile" HorizontalAlignment="Center" Margin="64,245,64,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="193" Width="472" TextAlignment="Center" FontSize="32" FontFamily="Lucida Fax" Foreground="White" FontWeight="Bold" Text="attendance file saved as "/>
+        <TextBlock x:Name="textBlockSaveFile" HorizontalAlignment="Center" Margin="0,0,0,200" TextWrapping="Wrap" VerticalAlignment="Center" Height="193" Width="472" TextAlignment="Center" FontSize="32" FontFamily="Lucida Fax" Foreground="White" FontWeight="Bold" Text="attendance file saved as "/>
         <Button x:Name="buttonOpenText" Content="Open Text File" HorizontalAlignment="Center" Margin="100,516,100,204" VerticalAlignment="Center" Width="400" Height="80" FontSize="42.667" FontFamily="DengXian" BorderBrush="Black" Cursor="Hand" Click="buttonOpenText_Click"/>
 
     </Grid>
