--- a/CheckerApplication-master/WpfApplication2/UserControlPages/SignInPage.xaml
+++ b/CheckerApplication-master/WpfApplication2/UserControlPages/SignInPage.xaml
@@ -7,10 +7,13 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300" Width="600" Height="800">
     <Grid>
-        <TextBlock x:Name="textBlock" HorizontalAlignment="Center" Margin="64.5,0" TextWrapping="Wrap" Text="GORDON COLLEGE Chapel Checker Sign-In" VerticalAlignment="Top" Height="268" Width="471" TextAlignment="Center" FontSize="42.667" FontFamily="Lucida Fax" Foreground="White" FontWeight="Bold"/>
-        <TextBlock x:Name="textBlock_Copy" HorizontalAlignment="Center" Margin="129.5,254,129.5,0" TextWrapping="Wrap" Text="Scan to Sign in" VerticalAlignment="Top" Height="59" Width="341" TextAlignment="Center" FontSize="42.667" FontFamily="Lucida Fax" Foreground="White" FontWeight="Bold"/>
-        <Button x:Name="buttonScan" Content="Sign in" HorizontalAlignment="Center" Margin="180,337,170,0" VerticalAlignment="Top" Width="250" Height="100" Click="buttonScan_Click" BorderThickness="3" Cursor="Hand" Background="#FF2EC935" FontSize="42.667" FontFamily="DengXian" Panel.ZIndex="1"/>
-        <TextBlock x:Name="labelID" HorizontalAlignment="Left" Margin="180,490,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Height="83" Width="250" FontFamily="DengXian" FontSize="18.667" Foreground="White"/>
+        <TextBlock x:Name="textBlock" HorizontalAlignment="Center" TextWrapping="Wrap" Text="GORDON COLLEGE Christian Life and Worship Credit System" VerticalAlignment="Center" Height="150" Width="600" TextAlignment="Center" FontSize="42.667" FontFamily="Lucida Fax" Foreground="White" FontWeight="Bold" Margin="0,0,0,650"/>
+        <TextBlock x:Name="textBlock_Copy" HorizontalAlignment="Center" Margin="0,0,0,200" TextWrapping="Wrap" Text="Scan to Sign in" VerticalAlignment="Center" Height="59" Width="341" TextAlignment="Center" FontSize="42.667" FontFamily="Lucida Fax" Foreground="White" FontWeight="Bold"/>
+        <Button x:Name="buttonScan" Content="Sign in" HorizontalAlignment="Center" Margin="0" VerticalAlignment="Center" Width="250" Height="100" Click="buttonScan_Click" BorderThickness="3" Cursor="Hand" Background="#FF2EC935" FontSize="42.667" FontFamily="DengXian" Panel.ZIndex="1"/>
+        <TextBlock x:Name="labelID" HorizontalAlignment="Center" Margin="0,250,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Height="80" Width="300" FontFamily="DengXian" FontSize="18.667" Foreground="White" TextAlignment="Center"/>
+        <Button x:Name="buttonUpdateStudentInfo" Content="Update Database" HorizontalAlignment="Center" Margin="0,550,0,0" VerticalAlignment="Center" Width="400" Height="80" BorderThickness="3" FontSize="37.333" FontFamily="DengXian" BorderBrush="#FF707070" Cursor="Hand" Click="buttonUpdate_Click" Background="LightGray"/>
+        <Button x:Name="buttonProceed" Content="Proceed" HorizontalAlignment="Center" Margin="0" VerticalAlignment="Center" Width="250" Height="100" BorderThickness="3" Cursor="Hand" Background="#FF2EC935" FontSize="42.667" FontFamily="DengXian" Panel.ZIndex="0" Click="buttonProceed_Click"/>
+        <TextBlock x:Name="labelID_Counter" HorizontalAlignment="Center" Margin="0,140,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Height="30" Width="50" FontFamily="DengXian" FontSize="18.667" Foreground="White" TextAlignment="Center"/>
 
     </Grid>
 </UserControl>
