--- a/CheckerApplication-master/WpfApplication2/UserControlPages/EventPage.xaml
+++ b/CheckerApplication-master/WpfApplication2/UserControlPages/EventPage.xaml
@@ -10,7 +10,7 @@
         <TextBlock x:Name="textBlock" HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" Height="50" Width="600" TextAlignment="Center" FontSize="42.667" FontFamily="Lucida Fax" Foreground="White" FontWeight="Bold" Text="Select an Event:"/>
         <Button x:Name="buttonOk" Content="Ok" HorizontalAlignment="Left" Margin="360,651,0,0" VerticalAlignment="Top" Width="176" Height="60" FontSize="42.667" FontFamily="DengXian" Click="buttonOk_Click" Cursor="Hand"/>
         <Button x:Name="buttonBack" Content="Back" HorizontalAlignment="Left" Margin="64,651,0,0" VerticalAlignment="Top" Width="176" Height="60" FontSize="42.667" FontFamily="DengXian" Click="buttonBack_Click" Cursor="Hand"/>
-        <TextBlock x:Name="labelID" HorizontalAlignment="Center" Margin="0,430,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Height="40" Width="350" FontFamily="DengXian" FontSize="18.667" Foreground="White"/>
+        <TextBlock x:Name="labelID" HorizontalAlignment="Center" Margin="0,430,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Height="40" Width="350" FontFamily="DengXian" FontSize="18.667" Foreground="White" TextAlignment="Center"/>
         <ListBox x:Name="listBox" HorizontalAlignment="Center" Height="500" Margin="50,80,50,212" VerticalAlignment="Center" Width="500" BorderBrush="Black" SelectionChanged="ListBox_SelectionChanged" Cursor="Hand"/>
 
     </Grid>
