--- a/CheckerApplication-master/WpfApplication2/UserControlPages/EventPage.xaml
+++ b/CheckerApplication-master/WpfApplication2/UserControlPages/EventPage.xaml
@@ -8,9 +8,9 @@
              d:DesignHeight="300" d:DesignWidth="300" Width="600" Height="800">
     <Grid>
         <TextBlock x:Name="textBlock" HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" Height="50" Width="600" TextAlignment="Center" FontSize="42.667" FontFamily="Lucida Fax" Foreground="White" FontWeight="Bold" Text="Select an Event:"/>
-        <Button x:Name="buttonOk" Content="Ok" HorizontalAlignment="Left" Margin="360,651,0,0" VerticalAlignment="Top" Width="176" Height="60" FontSize="42.667" FontFamily="DengXian" Click="buttonOk_Click" Cursor="Hand"/>
-        <Button x:Name="buttonBack" Content="Back" HorizontalAlignment="Left" Margin="64,651,0,0" VerticalAlignment="Top" Width="176" Height="60" FontSize="42.667" FontFamily="DengXian" Click="buttonBack_Click" Cursor="Hand"/>
-        <TextBlock x:Name="labelID" HorizontalAlignment="Center" Margin="0,430,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Height="40" Width="350" FontFamily="DengXian" FontSize="18.667" Foreground="White" TextAlignment="Center"/>
+        <Button x:Name="buttonOk" Content="Ok" HorizontalAlignment="Left" Margin="360,651,0,0" VerticalAlignment="Top" Width="176" Height="60" FontSize="42.667" FontFamily="DengXian" Click="buttonOk_Click" Cursor="Hand" IsDefault="True"/>
+        <Button x:Name="buttonBack" Content="Back" HorizontalAlignment="Left" Margin="64,651,0,0" VerticalAlignment="Top" Width="176" Height="60" FontSize="42.667" FontFamily="DengXian" Click="buttonBack_Click" Cursor="Hand" IsCancel="True"/>
+        <TextBlock x:Name="labelID" HorizontalAlignment="Center" Margin="0,470,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Height="30" Width="350" FontFamily="DengXian" FontSize="18.667" Foreground="White" TextAlignment="Center"/>
         <ListBox x:Name="listBox" HorizontalAlignment="Center" Height="550" Margin="0,0,10,110" VerticalAlignment="Center" Width="530" BorderBrush="Black" SelectionChanged="ListBox_SelectionChanged" Cursor="Hand"/>
 
     </Grid>
