--- a/CheckerApplication-master/WpfApplication2/MainWindow.xaml
+++ b/CheckerApplication-master/WpfApplication2/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApplication2"
         mc:Ignorable="d"
-        Title="Gordon College Chapel Christian Life and Worship Credit System" Height="800" Width="600" Background="#FF3368DA">
+        Title="Gordon College Chapel Christian Life and Worship Credit System" Height="800" Width="600" Background="#FF3368DA" WindowState="Maximized">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -14,7 +14,7 @@
 
         <ContentControl x:Name="contentControl" Grid.Row="1"/>
         <ToolBarTray Height="40" Margin="0" Grid.RowSpan="2" VerticalAlignment="Bottom"/>
-        <TextBox x:Name="textBox1" Grid.Row="1" TextWrapping="Wrap" Text="Ready.." Width="592" FontSize="21.333" Margin="0" VerticalAlignment="Bottom" Height="40" HorizontalAlignment="Left"/>
-        <TextBox x:Name="textBox2" Height="40" Margin="0,0,1,0" Grid.Row="1" TextWrapping="Wrap" Text="Waiting for Connection" VerticalAlignment="Bottom" FontSize="21.333" Width="350" HorizontalAlignment="Right"/>
+        <TextBox x:Name="textBox1" Grid.Row="1" TextWrapping="Wrap" Text="Updated: Recently?" Width="592" FontSize="21.333" Margin="0" VerticalAlignment="Bottom" Height="40" HorizontalAlignment="Left"/>
+        <TextBox x:Name="textBox2" Height="40" Margin="0,0,1,0" Grid.Row="1" TextWrapping="Wrap" Text="Waiting for Connection" VerticalAlignment="Bottom" FontSize="21.333" Width="250" HorizontalAlignment="Right"/>
     </Grid>
 </Window>
