--- a/CheckerApplication-master/WpfApplication2/UserControlPages/SignInPage.xaml
+++ b/CheckerApplication-master/WpfApplication2/UserControlPages/SignInPage.xaml
@@ -8,14 +8,15 @@
              d:DesignHeight="300" d:DesignWidth="300" Width="600" Height="800">
     <Grid HorizontalAlignment="Center">
         <TextBlock x:Name="textBlock" HorizontalAlignment="Center" TextWrapping="Wrap" Text="GORDON COLLEGE Christian Life and Worship Credit System" VerticalAlignment="Center" Height="150" Width="600" TextAlignment="Center" FontSize="42.667" FontFamily="Lucida Fax" Foreground="White" FontWeight="Bold" Margin="0,0,0,650"/>
-        <TextBlock x:Name="textBlock_Copy" HorizontalAlignment="Center" Margin="0,0,0,200" TextWrapping="Wrap" Text="Scan to Sign in" VerticalAlignment="Center" Height="59" Width="341" TextAlignment="Center" FontSize="42.667" FontFamily="Lucida Fax" Foreground="White" FontWeight="Bold"/>
+        <TextBlock x:Name="textBlock2" HorizontalAlignment="Center" Margin="0,0,0,200" TextWrapping="Wrap" Text="Scan to Sign in" VerticalAlignment="Center" Height="59" Width="341" TextAlignment="Center" FontSize="42.667" FontFamily="Lucida Fax" Foreground="White" FontWeight="Bold"/>
         <Button x:Name="buttonScan" Content="Sign in" HorizontalAlignment="Center" Margin="0" VerticalAlignment="Center" Width="250" Height="100" Click="buttonScan_Click" BorderThickness="3" Cursor="Hand" Background="#FF2EC935" FontSize="42.667" FontFamily="DengXian" Panel.ZIndex="1" IsDefault="True"/>
         <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Center" Height="140" Margin="0,300,0,0" Stroke="Black" VerticalAlignment="Center" Width="320"/>
         <TextBlock x:Name="labelID" HorizontalAlignment="Center" Margin="0,300,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Height="120" Width="300" FontFamily="DengXian" FontSize="24" Foreground="#FF1111E0" TextAlignment="Center"/>
         <Button x:Name="buttonUpdateStudentInfo" Content="Update Database" HorizontalAlignment="Center" Margin="0,550,0,0" VerticalAlignment="Center" Width="400" Height="80" BorderThickness="3" FontSize="37.333" FontFamily="DengXian" BorderBrush="#FF707070" Cursor="Hand" Click="buttonUpdate_Click" Background="LightGray"/>
         <Button x:Name="buttonProceed" Content="Proceed" HorizontalAlignment="Center" Margin="0" VerticalAlignment="Center" Width="250" Height="100" BorderThickness="3" Cursor="Hand" Background="#FF2EC935" FontSize="42.667" FontFamily="DengXian" Panel.ZIndex="0" Click="buttonProceed_Click" IsDefault="True" IsEnabled="False"/>
         <TextBlock x:Name="labelID_Counter" HorizontalAlignment="Center" Margin="0,130,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Height="30" Width="50" FontFamily="DengXian" FontSize="18.667" Foreground="White" TextAlignment="Center"/>
-        
+        <TextBlock x:Name="textBlock3" HorizontalAlignment="Center" Margin="0,670,0,0" TextWrapping="Wrap" Text="(takes about 15 seconds)" VerticalAlignment="Center" Height="38" Width="310" TextAlignment="Center" FontSize="21.333" FontFamily="Lucida Fax" Foreground="White"/>
+
 
     </Grid>
 </UserControl>
