--- a/CheckerApplication-master/WpfApplication2/UserControlPages/SignInPage.xaml
+++ b/CheckerApplication-master/WpfApplication2/UserControlPages/SignInPage.xaml
@@ -16,6 +16,31 @@
         <Button x:Name="buttonProceed" Content="Proceed" HorizontalAlignment="Center" Margin="0" VerticalAlignment="Center" Width="250" Height="100" BorderThickness="3" Cursor="Hand" Background="#FF2EC935" FontSize="42.667" FontFamily="DengXian" Panel.ZIndex="0" Click="buttonProceed_Click" IsDefault="True" IsEnabled="False"/>
         <TextBlock x:Name="labelID_Counter" HorizontalAlignment="Center" Margin="0,130,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Height="30" Width="50" FontFamily="DengXian" FontSize="18.667" Foreground="White" TextAlignment="Center"/>
         <TextBlock x:Name="textBlock3" HorizontalAlignment="Center" Margin="0,670,0,0" TextWrapping="Wrap" Text="(takes about 15 seconds)" VerticalAlignment="Center" Height="38" Width="310" TextAlignment="Center" FontSize="21.333" FontFamily="Lucida Fax" Foreground="White"/>
+        <Button x:Name="buttonCancelScan" Content="Cancel" HorizontalAlignment="Center" Margin="175,350" VerticalAlignment="Center" Width="250" Height="100" Click="buttonCancelScan_Click" BorderThickness="3" Cursor="Hand" Background="#FF950404" FontSize="42.667" FontFamily="DengXian" Panel.ZIndex="0" IsDefault="True" IsEnabled="False"/>
+        <Ellipse x:Name="circleAnimation" Fill="#FFF4F4F5" HorizontalAlignment="Center" Height="20" Margin="0,130,200,0" Stroke="Black" VerticalAlignment="Center" Width="20" />
+
+        <Grid.Triggers>
+            <EventTrigger SourceName="buttonScan" RoutedEvent="Button.Click">
+               
+                <BeginStoryboard Name="Scanning">
+                    
+                    <Storyboard   x:Name="ScanningStoryboard">
+                        <ThicknessAnimationUsingKeyFrames Storyboard.TargetName="circleAnimation" Storyboard.TargetProperty="Margin" BeginTime="0:0:0" RepeatBehavior="Forever" AutoReverse="True">
+                            <SplineThicknessKeyFrame KeyTime="0:0:0" Value="0,130,200,0" />
+                            <SplineThicknessKeyFrame KeyTime="0:0:0.5" Value="200,130,0,0" />
+                        </ThicknessAnimationUsingKeyFrames>
+                    </Storyboard>
+                    
+                </BeginStoryboard>
+                 
+            </EventTrigger>
+            <EventTrigger SourceName="buttonCancelScan" RoutedEvent="Button.Click">
+                <StopStoryboard BeginStoryboardName="Scanning" />
+            </EventTrigger>
+            <EventTrigger SourceName="buttonCancelScan" RoutedEvent="Button.Click">
+                <StopStoryboard BeginStoryboardName="Scanning" />
+            </EventTrigger>
+        </Grid.Triggers>
 
 
     </Grid>
