--- a/CheckerApplication-master/WpfApplication2/App.xaml
+++ b/CheckerApplication-master/WpfApplication2/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="WpfApplication2.App"
+﻿<Application x:Class="CheckerApplication.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:WpfApplication2"
+             xmlns:local="clr-namespace:CheckerApplication"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
