--- a/CheckerApplication-master/WpfApplication2/MainWindow.xaml
+++ b/CheckerApplication-master/WpfApplication2/MainWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="WpfApplication2.MainWindow"
+﻿<Window x:Class="CheckerApplication.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WpfApplication2"
+        xmlns:local="clr-namespace:CheckerApplication"
         mc:Ignorable="d"
-        Title="Gordon College Chapel Christian Life and Worship Credit System" Height="850" Width="600" Background="#FF3368DA" WindowState="Maximized">
+        Title="Gordon College Christian Life and Worship Credit System" Height="850" Width="600" Background="#FF3368DA" WindowState="Maximized">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
