--- a/CheckerApplication-master/WpfApplication2/UserControlPages/EventPage.xaml
+++ b/CheckerApplication-master/WpfApplication2/UserControlPages/EventPage.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="WpfApplication2.EventPage"
+﻿<UserControl x:Class="CheckerApplication.EventPage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:WpfApplication2"
+             xmlns:local="clr-namespace:CheckerApplication"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300" Width="600" Height="800">
     <Grid>
@@ -11,7 +11,7 @@
         <Button x:Name="buttonOk" Content="Ok" HorizontalAlignment="Left" Margin="360,651,0,0" VerticalAlignment="Top" Width="176" Height="60" FontSize="42.667" FontFamily="DengXian" Click="buttonOk_Click" Cursor="Hand" IsDefault="True"/>
         <Button x:Name="buttonBack" Content="Back" HorizontalAlignment="Left" Margin="64,651,0,0" VerticalAlignment="Top" Width="176" Height="60" FontSize="42.667" FontFamily="DengXian" Click="buttonBack_Click" Cursor="Hand" IsCancel="True"/>
         <TextBlock x:Name="labelID" HorizontalAlignment="Center" Margin="0,470,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Height="30" Width="350" FontFamily="DengXian" FontSize="18.667" Foreground="White" TextAlignment="Center"/>
-        <ListBox x:Name="listBox" HorizontalAlignment="Center" Height="550" Margin="0,0,10,110" VerticalAlignment="Center" Width="530" BorderBrush="Black" SelectionChanged="ListBox_SelectionChanged" Cursor="Hand"/>
+        <ListBox x:Name="eventListBox" HorizontalAlignment="Center" Height="550" Margin="0,0,10,110" VerticalAlignment="Center" Width="530" BorderBrush="Black" SelectionChanged="ListBox_SelectionChanged" Cursor="Hand"/>
 
     </Grid>
 </UserControl>
