--- a/CheckerApplication-master/WpfApplication2/UserControlPages/ResultsPage.xaml
+++ b/CheckerApplication-master/WpfApplication2/UserControlPages/ResultsPage.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="WpfApplication2.ResultsPage"
+﻿<UserControl x:Class="CheckerApplication.ResultsPage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:WpfApplication2"
+             xmlns:local="clr-namespace:CheckerApplication"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300" Width="600" Height="800">
     <Grid>
