--- a/CheckerApplication-master/WpfApplication2/UserControlPages/ScanPage.xaml
+++ b/CheckerApplication-master/WpfApplication2/UserControlPages/ScanPage.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="WpfApplication2.ScanPage"
+﻿<UserControl x:Class="CheckerApplication.ScanPage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:WpfApplication2"
+             xmlns:local="clr-namespace:CheckerApplication"
              mc:Ignorable="d" 
              d:DesignHeight="800" d:DesignWidth="600">
     <Grid>
