--- a/CheckerApplication-master/WpfApplication2/UserControlPages/ResultsPage.xaml
+++ b/CheckerApplication-master/WpfApplication2/UserControlPages/ResultsPage.xaml
@@ -7,13 +7,13 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300" Width="600" Height="800">
     <Grid>
-        <TextBlock x:Name="textBlockResults" HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" Height="59" Width="600" TextAlignment="Center" FontSize="42.667" FontFamily="Lucida Fax" Foreground="#FFEBEAEA" FontWeight="Bold" Text="Results" Margin="0,20,0,0"/>
-        <Button x:Name="buttonBack" Content="Back to Sign-in" HorizontalAlignment="Center" Margin="0,550,0,0" VerticalAlignment="Center" Width="400" Height="80" FontSize="42.667" FontFamily="DengXian" Click="buttonBack_Click" BorderBrush="#FF31342B" Cursor="Hand" BorderThickness="2,2,4,4"/>
-        <TextBlock x:Name="textBlockSaveFile" HorizontalAlignment="Center" Margin="0" TextWrapping="Wrap" VerticalAlignment="Center" Height="180" Width="475" TextAlignment="Center" FontSize="32" FontFamily="Lucida Fax" Foreground="#FFEBEAEA" FontWeight="Bold" Text="attendance file saved as "/>
-        <Button x:Name="buttonOpenText" Content="Open Text File" HorizontalAlignment="Center" Margin="100,516,100,204" VerticalAlignment="Center" Width="400" Height="80" FontSize="42.667" FontFamily="DengXian" BorderBrush="#FF31342B" Cursor="Hand" Click="buttonOpenText_Click" BorderThickness="2,2,4,4"/>
+        <TextBlock x:Name="textBlockResults" HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" Height="59" Width="600" TextAlignment="Center" FontSize="42.667" FontFamily="Malgun Gothic" Foreground="#FFEBEAEA" FontWeight="Bold" Text="Results" Margin="0,20,0,0"/>
+        <Button x:Name="buttonBack" Content="Back to Sign-in" HorizontalAlignment="Center" Margin="0,550,0,0" VerticalAlignment="Center" Width="400" Height="80" FontSize="42.667" FontFamily="Malgun Gothic" Click="buttonBack_Click" BorderBrush="#FF31342B" Cursor="Hand" BorderThickness="2"/>
+        <TextBlock x:Name="textBlockSaveFile" HorizontalAlignment="Center" Margin="0" TextWrapping="Wrap" VerticalAlignment="Center" Height="180" Width="475" TextAlignment="Center" FontSize="32" FontFamily="Malgun Gothic" Foreground="#FFEBEAEA" FontWeight="Bold" Text="attendance file saved as "/>
+        <Button x:Name="buttonOpenText" Content="Open Text File" HorizontalAlignment="Center" Margin="100,516,100,204" VerticalAlignment="Center" Width="400" Height="80" FontSize="42.667" FontFamily="Malgun Gothic" BorderBrush="#FF31342B" Cursor="Hand" Click="buttonOpenText_Click" BorderThickness="2"/>
         <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Center" Height="120" Margin="0,0,0,370" Stroke="#FF31342B" VerticalAlignment="Center" Width="370"/>
-        <TextBlock x:Name="labelEventTitle" HorizontalAlignment="Center" Margin="0,0,0,370" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Height="100" Width="320" FontFamily="DengXian" FontSize="26.667" Foreground="Black" TextAlignment="Center"/>
-        <TextBlock x:Name="textBlockTitle" HorizontalAlignment="Center" Margin="0,0,0,550" TextWrapping="Wrap" VerticalAlignment="Center" Height="50" Width="400" TextAlignment="Center" FontSize="32" FontFamily="Lucida Fax" Foreground="#FFEBEAEA" FontWeight="Bold" Text="Scanning complete for:"/>
+        <TextBlock x:Name="labelEventTitle" HorizontalAlignment="Center" Margin="0,0,0,370" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Height="100" Width="320" FontFamily="Malgun Gothic" FontSize="26.667" Foreground="Black" TextAlignment="Center"/>
+        <TextBlock x:Name="textBlockTitle" HorizontalAlignment="Center" Margin="0,0,0,550" TextWrapping="Wrap" VerticalAlignment="Center" Height="50" Width="400" TextAlignment="Center" FontSize="32" FontFamily="Malgun Gothic" Foreground="#FFEBEAEA" FontWeight="Bold" Text="Scanning complete for:"/>
 
     </Grid>
 </UserControl>
