--- a/CheckerApplication-master/WpfApplication2/UserControlPages/EventPage.xaml
+++ b/CheckerApplication-master/WpfApplication2/UserControlPages/EventPage.xaml
@@ -7,11 +7,11 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300" Width="600" Height="800">
     <Grid>
-        <TextBlock x:Name="textBlock" HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" Height="50" Width="600" TextAlignment="Center" FontSize="42.667" FontFamily="Malgun Gothic" Foreground="#FFEBEAEA" FontWeight="Bold" Text="Select an Event:"/>
-        <Button x:Name="buttonOk" Content="Ok" HorizontalAlignment="Left" Margin="360,651,0,0" VerticalAlignment="Top" Width="176" Height="60" FontSize="42.667" FontFamily="Malgun Gothic" Click="buttonOk_Click" Cursor="Hand" BorderThickness="2" BorderBrush="#FF31342B"/>
-        <Button x:Name="buttonBack" Content="Back" HorizontalAlignment="Left" Margin="64,651,0,0" VerticalAlignment="Top" Width="176" Height="60" FontSize="42.667" FontFamily="Malgun Gothic" Click="buttonBack_Click" Cursor="Hand" Background="#FFEBEAEA" BorderBrush="#FF31342B" BorderThickness="2"/>
-        <TextBlock x:Name="labelID" HorizontalAlignment="Center" Margin="0,470,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Height="30" Width="350" FontFamily="Malgun Gothic" FontSize="18.667" Foreground="#FFEBEAEA" TextAlignment="Center"/>
-        <ListBox x:Name="eventListBox" HorizontalAlignment="Center" Height="550" Margin="0,0,10,110" VerticalAlignment="Center" Width="560" BorderBrush="Black" SelectionChanged="ListBox_SelectionChanged" Cursor="Hand" Background="#FFEBEAEA" FontFamily="Malgun Gothic"/>
+        <TextBlock x:Name="textBlock" HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" Height="60" Width="600" TextAlignment="Center" FontSize="48" FontFamily="Open Sans Condensed" Foreground="#FFEBEAEA" FontWeight="Bold" Text="Select an Event:"/>
+        <Button x:Name="buttonOk" Content="Ok" HorizontalAlignment="Center" Margin="300,600,0,0" VerticalAlignment="Center" Width="176" Height="60" FontSize="42.667" FontFamily="Open Sans Condensed" Click="buttonOk_Click" Cursor="Hand" BorderThickness="2" BorderBrush="#FF31342B" FontWeight="Bold"/>
+        <Button x:Name="buttonBack" Content="Back" HorizontalAlignment="Center" Margin="0,600,300,0" VerticalAlignment="Center" Width="176" Height="60" FontSize="42.667" FontFamily="Open Sans Condensed" Click="buttonBack_Click" Cursor="Hand" Background="#FFEBEAEA" BorderBrush="#FF31342B" BorderThickness="2" FontWeight="Bold"/>
+        <TextBlock x:Name="labelID" HorizontalAlignment="Center" Margin="0,480,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Center" Height="30" Width="350" FontFamily="Malgun Gothic" FontSize="18.667" Foreground="#FFEBEAEA" TextAlignment="Center"/>
+        <ListBox x:Name="eventListBox" HorizontalAlignment="Center" Height="550" Margin="0,0,0,110" VerticalAlignment="Center" Width="550" BorderBrush="Black" SelectionChanged="ListBox_SelectionChanged" Cursor="Hand" Background="#FFEBEAEA" FontFamily="Open Sans Condensed" FontSize="18" FontWeight="Bold"/>
 
     </Grid>
 </UserControl>
