--- a/CheckerApplication-master/CheckerSystem/UserControlPages/SignInPage.xaml
+++ b/CheckerApplication-master/CheckerSystem/UserControlPages/SignInPage.xaml
@@ -17,6 +17,10 @@
         <Ellipse x:Name="circleAnimationScan" Fill="#FFF4F4F5" HorizontalAlignment="Center" Height="20" Margin="0,110,200,0" Stroke="Black" VerticalAlignment="Center" Width="20" />
         <Image x:Name="image" HorizontalAlignment="Center" Height="250" Margin="0,0,0,550" VerticalAlignment="Center" Width="250" Source="/CheckerSystem;component/Assets/gordon-seal-300.png"/>
         <Ellipse x:Name="circleAnimationUpdate" Fill="#FFF4F4F5" HorizontalAlignment="Center" Height="20" Margin="0,450,200,0" Stroke="Black" VerticalAlignment="Center" Width="20" />
+        <Button x:Name="buttonSecret" Content="Hidden Button" HorizontalAlignment="Center" Margin="0,0,67,661" VerticalAlignment="Center" Width="35" Height="35" Click="backgroundChanger" Opacity="0"/>
+        <Button x:Name="buttonSecret2" Content="Hidden Button" HorizontalAlignment="Center" Margin="67,0,0,661" VerticalAlignment="Center" Width="35" Height="35" Click="backgroundChanger2" Opacity="0"/>
+        <Button x:Name="buttonSecret3" Content="Hidden Button" HorizontalAlignment="Center" Margin="0,0,0,730" VerticalAlignment="Center" Width="35" Height="35" Click="backgroundChanger3" Opacity="0"/>
+        <Button x:Name="buttonSecret4" Content="Hidden Button" HorizontalAlignment="Center" Margin="0,0,0,594" VerticalAlignment="Center" Width="35" Height="35" Click="backgroundChanger4" Opacity="0"/>
 
         <Grid.Triggers>
             <EventTrigger SourceName="buttonScan" RoutedEvent="Button.Click">
