--- a/CheckerApplication-master/CheckerSystem/MainWindow.xaml
+++ b/CheckerApplication-master/CheckerSystem/MainWindow.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CheckerApplication"
+        Icon="gordonIcon.ico"
         Closing="MainWindow_Closing"
         mc:Ignorable="d"
         Title="Gordon College Christian Life and Worship Credit System" Height="850" Width="600" Background="#FF014983" WindowState="Maximized">
